Sections 3 et 4 mises à jour

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -125,6 +125,20 @@ pages={2437--2453},
 language={English}
 }
 
+@ARTICLE{IETF-Routing-WSN-2014,
+  author={Ancillotti, E. and Bruno, R. and Conti, M.},
+  journal={Industrial Informatics, IEEE Transactions on},
+  title={Reliable Data Delivery With the IETF Routing Protocol for Low-Power and Lossy Networks},
+  year={2014},
+  month={Aug},
+  volume={10},
+  number={3},
+  pages={1864--1877},
+  keywords={IP networks;Internet;optimisation;routing protocols;telecommunication network reliability;Contiki operating system;Cooja emulator;IETF routing protocol;IPv6 routing protocol;Internet engineering task force routing protocol;advanced metering infrastructure;data delivery reliability;flexible cross-layering design;large-scale deployments;lossy networks;low-power networks;routing optimization;Estimation;Monitoring;Packet loss;Reliability;Routing;Wireless sensor networks;Advanced metering infrastructure (AMI);Contiki operating system (OS);link-quality estimation;low-Power lossy networks (LLNs);prototype;reliability;routing protocol for low-power and lossy networks (RPL)},
+  doi={10.1109/TII.2014.2332117},
+  ISSN={1551-3203},
+}
+
 @ARTICLE{Key-Mgmt-2015,
 author={Seung-Hyun Seo and Jongho Won and Sultana, S. and Bertino, E.},
   journal={Information Forensics and Security, IEEE Transactions on}, 
@@ -160,17 +174,7 @@ eprint = {http://comjnl.oxfordjournals.org/content/early/2015/02/15/comjnl.bxv00
 journal = {The Computer Journal} 
 }
 
-@INPROCEEDINGS{RPL-Eval-Power-Lines-2014,
-author={Balmau, O. and Dzung, D. and Karaagac, A. and Nesovic, V. and Paunovic, A. and Pignolet, Y.A. and Tehrani, N.A.},
-  booktitle={Smart Grid Communications (SmartGridComm), 2014 IEEE International Conference on}, 
-  title={Evaluation of RPL for medium voltage power line communication}, 
-  year={2014},
-  month={Nov},
-  pages={446--451},
-  keywords={IP networks;carrier transmission on power lines;embedded systems;power grids;routing protocols;COOJA network simulator;IPv6 routing protocol;PLC links;RPL evaluation;electricity distribution;embedded OS Contiki networking stack;grid layout;intelligent grid;local utility;low-power devices;medium voltage grid simulation;medium voltage power line communication;networking protocols;wireless transmission power;Interference;Medium voltage;Multiaccess communication;Power line communications;Protocols;Signal to noise ratio;Smart grids},
-  doi={10.1109/SmartGridComm.2014.7007687},
-}
-
+%% Présente également des résultats MATLAB
 @INPROCEEDINGS{RPL-GreenHouse-Convgc-Time-2014,
 author={Arunkumar, M. and Alagumeenaakshi, M.},
   booktitle={Green Computing Communication and Electrical Engineering (ICGCCEE), 2014 International Conference on}, 
@@ -182,6 +186,7 @@ author={Arunkumar, M. and Alagumeenaakshi, M.},
   doi={10.1109/ICGCCEE.2014.6922254},
 }
 
+%% Pas de precisions sur le matos émulé
 @INPROCEEDINGS{RPL-Pref-Compar-6LoWPAN-2014,
 author={Haofei Xie and Guoqi Zhang and Delong Su and Ping Wang and Feng Zeng},
   booktitle={Software Engineering and Service Science (ICSESS), 2014 5th IEEE International Conference on}, 
@@ -208,7 +213,7 @@ author={Trevizan de Oliveira, B. and Borges Margi, C. and Batista Gabriel, L.},
 @INPROCEEDINGS{Trickle-L2-2014,
 author={Ancillotti, E. and Bruno, R. and Conti, M. and Mingozzi, E. and Vallati, C.},
   booktitle={A World of Wireless, Mobile and Multimedia Networks (WoWMoM), 2014 IEEE 15th International Symposium on}, 
-  title={Trickle-L<sup>2</sup>: Lightweight link quality estimation through Trickle in RPL networks}, 
+  title={{Trickle-L\textsuperscript{2}:} Lightweight link quality estimation through Trickle in RPL networks}, 
   year={2014},
   month={June},
   pages={1--9},
